<resources>
    <string name="Auto_Self_Test_Title">Auto self test result:</string>
    <string name="BTFirmwareVersionId">BT Firmware Version:</string>
    <string name="Bad_Point_Test_Title">Bad point test result:</string>
    <string name="BatteryFirmwareVersionId">Battery Firmware Version:</string>
    <string name="BtMacAddress">Bt Mac Address:</string>
    <string name="CPUId">CPU:</string>
    <string name="CPUSecureRevisionId">CPU Secure Revision:</string>
    <string name="CPUSecureTypeId">CPU Secure Type:</string>
    <string name="CameraFirmwareVersionId">Camera Firmware Version:</string>
    <string name="Check_test_of_app">Check the result of test app.</string>
    <string name="DTVExt_title">External DTV Test</string>
    <string name="DTVTest_Fail">DTV Test Failed.</string>
    <string name="DTVTest_Start">DTV Test Start.</string>
    <string name="DTVTest_Success">DTV Test Success.</string>
    <string name="DTVTest_title">DTV Test</string>
    <string name="Detect_Test_Result">Detect test result:</string>
    <string name="Detect_Test_Title">Detect Test</string>
    <string name="Device_BaseBandVersion">Baseband Version:</string>
    <string name="Device_BuildVersion">Build Version:</string>
    <string name="Device_CellphoneVersion">Cell Phone Model:</string>
    <string name="Device_DeviceSWVersion">Device Software Version:</string>
    <string name="Device_DramVersion">Dram Information:</string>
    <string name="Device_EmmcVersion">Emmc Information:</string>
    <string name="Device_FlashVersion">Nand Information:</string>
    <string name="Device_HWBaseBandVersion">HW Baseband Version:</string>
    <string name="Device_IMEI">IMEI:</string>
    <string name="Device_LinuxKernelVersion">Linux Kernel Version:</string>
    <string name="Device_MEID">MEID:</string>
    <string name="Device_ModelName">Device Model:</string>
    <string name="Device_NVITEM8039">Picasso Info:</string>
    <string name="Device_NVITEM80391">SJUG Info:</string>
    <string name="Device_ProductId">Product ID:</string>
    <string name="Device_TouchScreenFirmwareVersion">Touch panel firmware:</string>
    <string name="Device_UfsVersion">Ufs Information:</string>
    <string name="Ethernet_title">Ethernet Test</string>
    <string name="FQCTestForRobot_title">FQC for Robot Test</string>
    <string name="FQC_title">FQC Version:</string>
    <string name="FailedInfo">Read NV Item Failed</string>
    <string name="FelicaId">Felica Id:</string>
    <string name="FingerPrintDetect_title">FingerPrint Detect Test</string>
    <string name="FingerPrint_title">FingerPrint Test</string>
    <string name="HDDinfoId">HDD HW info</string>
    <string name="LCM">LCM Producer:</string>
    <string name="LcmInfo">Lcm Info:</string>
    <string name="LowBatteryString">Please let battery have more than 30% capacity</string>
    <string name="MainCamera_Vendor">Main Camera vendor:</string>
    <string name="Mo7SmartBezel">Smart Bezel Fw Ver:</string>
    <string name="MobileTV_Test">MobileTV_Test</string>
    <string name="No_Self_Test">Fail to execute auto self test.</string>
    <string name="OTG_title">OTG Test</string>
    <string name="RecNPlay_Play_Start">Start Playing.</string>
    <string name="RecNPlay_Play_Stop">Stop Playing.</string>
    <string name="RecNPlay_Prepare">prepare record.</string>
    <string name="RecNPlay_title">Mic Speaker Loopback Test</string>
    <string name="SKU_ID">SKU ID:</string>
    <string name="SKU_NAME">SKU NAME:</string>
    <string name="SNR_BER_Test">SNR_BER_Test</string>
    <string name="Show3dDisplayTest_TestFinished">Test finished.</string>
    <string name="Show3dDisplayTest_WrongIntent">Wrong intent.</string>
    <string name="Show3dDisplayTest_title">3D Display Test</string>
    <string name="ShowAntPlus_title">AntPlus Test</string>
    <string name="ShowBackgroundTests_title">Show Background Test</string>
    <string name="ShowBarometer_title">Barometer Test</string>
    <string name="ShowBatteryHotSwap_title">Battery Hot Swap Test</string>
    <string name="ShowBothSideLED_TurnOff">Turn Off LED</string>
    <string name="ShowBothSideLED_TurnOn">Turn On LED</string>
    <string name="ShowBothSideLED_title">LED (on both sides) Test</string>
    <string name="ShowGestureZw1_StartMessage">Please rotate the device with your hand.</string>
    <string name="ShowGestureZw1_title">Gesture Detection Test</string>
    <string name="ShowHeartRate_title">HeartRate Test</string>
    <string name="ShowLEDStr_title">LED Test</string>
    <string name="ShowLED_comments">Check LED</string>
    <string name="ShowTouchKeyLED_TurnOff">Turn Off LED</string>
    <string name="ShowTouchKeyLED_TurnOn">Turn On LED</string>
    <string name="ShowTouchKeyLED_title">Touch Key LED Test</string>
    <string name="ShowTouchpadTest_title">Touchpad Test</string>
    <string name="Sim1CardTest_sim1notinsert">SIM1 not insert</string>
    <string name="Sim2CardTest_sdnotinsert">SD card not insert</string>
    <string name="Sim2CardTest_sim2notinsert">SIM2 not insert</string>
    <string name="Sim2CardTest_title">SIM2 Card Test</string>
    <string name="SmartBezel_title">SmartBezel Test</string>
    <string name="SnrBerInfoText">SnrBerInfoText</string>
    <string name="TouchKey">Touch Key Fw Ver:</string>
    <string name="TouchpadFirmware">Touchpad fw ver:</string>
    <string name="VGACamera_Vendor">VGA Camera vendor:</string>
    <string name="WiFiFirmwareVersionId">WiFi Firmware Version:</string>
    <string name="WifiMacAddress">Wifi Mac Address:</string>
    <string name="action_settings">Settings</string>
    <string name="alert_dialog_cancel">No</string>
    <string name="alert_dialog_ok">Yes</string>
    <string name="alert_dialog_try">Retry</string>
    <string name="alert_dialog_two_buttons_title">Test Passed?</string>
    <string name="als_cover">Cover the Light-Sensor</string>
    <string name="als_title">ALS-Sensor Test</string>
    <string name="als_uncover">Uncover the Light-Sensor</string>
    <string name="app_name">FQC</string>
    <string name="aux_lens_id">Aux Lens ID:</string>
    <string name="aux_module_id">Aux Module ID:</string>
    <string name="backlight3d_title">3D Backlight Test</string>
    <string name="battery_current">Battery current</string>
    <string name="battery_health">Battery health</string>
    <string name="battery_info_current_units">mA</string>
    <string name="battery_info_health_dead">Dead</string>
    <string name="battery_info_health_good">Good</string>
    <string name="battery_info_health_over_voltage">Over voltage</string>
    <string name="battery_info_health_overheat">Overheat</string>
    <string name="battery_info_health_unknown">Unknown</string>
    <string name="battery_info_health_unspecified_failure">Unknown error</string>
    <string name="battery_info_power_ac">AC</string>
    <string name="battery_info_power_ac_usb">AC+USB</string>
    <string name="battery_info_power_unknown">Unknown</string>
    <string name="battery_info_power_unplugged">Unplugged</string>
    <string name="battery_info_power_usb">USB</string>
    <string name="battery_info_status_charging">Charging</string>
    <string name="battery_info_status_charging_ac">(AC)Charging</string>
    <string name="battery_info_status_charging_usb">(USB)Charging</string>
    <string name="battery_info_status_discharging">Discharging</string>
    <string name="battery_info_status_full">Full</string>
    <string name="battery_info_status_not_charging">Not charging</string>
    <string name="battery_info_status_unknown">Unknown</string>
    <string name="battery_info_temperature_units">° C</string>
    <string name="battery_info_voltage_units">mV</string>
    <string name="battery_level">Battery level (%)</string>
    <string name="battery_manufacture">Battery Manufacturer:</string>
    <string name="battery_scale">Battery scale</string>
    <string name="battery_status">Battery status</string>
    <string name="battery_technology">Battery technology</string>
    <string name="battery_temperature">Battery temperature</string>
    <string name="battery_title">Battery Information Test</string>
    <string name="battery_uptime">Time since boot</string>
    <string name="battery_voltage">Battery voltage</string>
    <string name="bluetooth_str_adding">Adding Device</string>
    <string name="bluetooth_str_bonded">Bonded</string>
    <string name="bluetooth_str_bonding">Bonding (pin = 0000)</string>
    <string name="bluetooth_str_completed">Completed</string>
    <string name="bluetooth_str_disabled">Bluetooth already disabled.</string>
    <string name="bluetooth_str_doing">...</string>
    <string name="bluetooth_str_enabled">Bluetooth already enabled.</string>
    <string name="bluetooth_str_enabling">Enabling Bluetooth...</string>
    <string name="bluetooth_str_fail">FAIL</string>
    <string name="bluetooth_str_found_device">Found Device :</string>
    <string name="bluetooth_str_no_bluetooth_service">This device can not support Bluetooth</string>
    <string name="bluetooth_str_no_device">No Bluetooth device exists!</string>
    <string name="bluetooth_str_not_bonded">Not Bonded</string>
    <string name="bluetooth_str_pass">PASS</string>
    <string name="bluetooth_str_result">Test Result:</string>
    <string name="bluetooth_str_scaning">Starting discovery...</string>
    <string name="bluetooth_str_started">Started</string>
    <string name="bluetooth_text_address">Address:</string>
    <string name="bluetooth_text_name">Name:</string>
    <string name="bluetooth_title">Bluetooth Test</string>
    <string name="brightness_info">Now do the screen brightness test, observe the screen with or without brightness changes</string>
    <string name="brightness_status_text">brightness:</string>
    <string name="brightness_title">Brightness Test</string>
    <string name="buttons_1_small">Calibrate</string>
    <string name="buzzer_title">Buzzer Test</string>
    <string name="calibrate_result_fail">calibrate Failed</string>
    <string name="calibrate_result_pass">calibrate Success</string>
    <string name="camera_error_title">Camera error</string>
    <string name="cameraiqc_title">Camera Test</string>
    <string name="cannot_connect_camera">Cannot connect to camera.</string>
    <string name="fail_button_text">Fail</string>
    <string name="fci_title_count">Count</string>
    <string name="fci_title_item">Test Name</string>
    <string name="fci_title_result">Result</string>
    <string name="fci_title_time">Time</string>
    <string name="flash_light_being_tested">Flash light being tested...</string>
    <string name="flight_glint_once">1</string>
    <string name="flight_glint_thrice">3</string>
    <string name="flight_glint_twice">2</string>
    <string name="flight_test_failed">Failed</string>
    <string name="flight_test_start">Start</string>
    <string name="front_lens_id">Front Lens ID:</string>
    <string name="front_module_id">Front Module ID:</string>
    <string name="info_button_text">Info</string>
    <string name="main_lens_id">Main Lens ID:</string>
    <string name="main_module_id">Main Module ID:</string>
    <string name="nfc_Result">Result</string>
    <string name="nfc_b_write">Clear TAG</string>
    <string name="nfc_b_write1">Write Test</string>
    <string name="nfc_tv_result" />
    <string name="nfc_vendor">NFC Vendor:</string>
    <string name="pass_button_text">Pass</string>
    <string name="power_plug">Power plug</string>
    <string name="sdcard_cap">SD Capacity:</string>
    <string name="version_title">SW &amp; HW Version Test</string>
    <string name="vibrate_being_tested">Vibrate being tested...</string>
    <string name="vibrator_test_failed">Failed</string>
    <string name="vibrator_test_forth">4</string>
    <string name="vibrator_test_once">1</string>
    <string name="vibrator_test_start">Start</string>
    <string name="vibrator_test_thrice">3</string>
    <string name="vibrator_test_twice">2</string>
</resources>